Use new implementation of the difference classes.
coverage-model provides a new API.